# CourseWork

./: .gitmodules  gogo
Algorithms/: 654.cpp  655.cpp  660.cpp  665.cpp  666.cpp  667.cpp  669.cpp  681.cpp  683.cpp  685.cpp  718.cpp
Competitive-Programming-I/: 1.py  3.py  4.py  472.py  473.py  474.py  475.cpp  475.py  476.cpp  477-2.cpp  477.cpp  478.cpp  479.cpp  480.cpp  481.py  482.cpp  483.java  484.cpp  485.cpp  486.cpp  487.cpp  488.cpp  489.cpp  490.cpp  492.cpp  493.py  5.py  522.cpp  523.py  524.java  526.py  527.cpp  531.py  543.cpp  819.c  819.cpp
Competitive-Programming-II/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  16.cpp  18.cpp  2.cpp  20.cpp  3.cpp  4.cpp  5.c  6.cpp  7.cpp  9.cpp
Computer-Organzation/: .gitignore
Computer-System-Administration/: instruction.sh  zbackupd.py  zbackupd.yml
Database/: 0611262.md  q3.sql  q4.sql  q6.sql  q7.sql
Fortran/: HW6_1262.f90  w1pA.f90
Introduction-to-Algorithms/: 641.cpp  643.cpp  652.cpp  668.cpp  676.cpp  677.cpp  682.cpp  684.cpp  712.cpp  713.cpp  717.cpp
Introduction-to-Computer-Science/: HW1_1262.f90  HW1_1262_OP.f90  HW2_1262.f90  HW3_1262.f90  HW4_1262.f90  HW5_1262.f90  w1PB.f90
Introduction-to-Computers-and-Programming/: LAB11-1.py  LAB11-2.py  LAB12-1.py  LAB12-2.py  LAB13-1.py  LAB13-2.py  (+6 more)
Machine-Learning/HW3/: .gitignore  linear.html  linear.ipynb  linear.py  logistic.html  logistic.ipynb  logistic.py  pyproject.toml  report.html
Unix-Programming/HW4/: .gitignore  capstone_ans.py  countme_ans.c  no_more_traps_ans.c  pyproject.toml  syscall_ans.c  traceme_ans.md
(+307 files in other folders)
