[tool.poetry]
name = "ml-hw3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"
pandas = "^0.25.3"
numpy = "^1.17"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
jupyter = "^1.0"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
